@@ -12,6 +12,10 @@ console_cmd         /usr/X11R6/bin/xterm -C -fg white -bg black +sb -T "Console 
 # Activate numlock when slim starts. Valid values: on|off
 # numlock             on
 
+# Hide the mouse cursor (note: does not work with some WMs).
+# Valid values: true|false
+# hidecursor          false
+
 # This command is executed after a succesful login.
 # you can place the %session and %theme variables
 # to handle launching of specific commands in .xinitrc
